Adding dynamic description of sorting order

--- a/lab1-dom/dom_manipulation.html
+++ b/lab1-dom/dom_manipulation.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <title>Lab 1 - DOM Manipulation</title>
-  <script src="dom_manipulation.js"></script>
+  <script src="dom_manipulation_solution.js"></script>
+  <!--<script src="dom_manipulation.js"></script> -->
 </head>
 
 <body>
@@ -22,21 +23,6 @@
   <hr>
   <ul id="billboard">
     <li>
-      <span class="billboard_pos">1</span> -
-      <span class="artist">Jonas Brothers</span> -
-      <span class="song">Sucker</span>
-    </li>
-    <li>
-      <span class="billboard_pos">2</span> -
-      <span class="artist">Ariana Grande</span> -
-      <span class="song">7 Rings</span>
-    </li>
-    <li>
-      <span class="billboard_pos">3</span> -
-      <span class="artist">Cardi B & Bruno Mars</span> -
-      <span class="song">Please Me</span>
-    </li>
-    <li>
       <span class="billboard_pos">4</span> -
       <span class="artist">Post Malone & Swae Lee</span> -
       <span class="song">Sunflower</span>
@@ -47,9 +33,24 @@
       <span class="song">Without me</span>
     </li>
     <li>
+      <span class="billboard_pos">3</span> -
+      <span class="artist">Cardi B & Bruno Mars</span> -
+      <span class="song">Please Me</span>
+    </li>
+    <li>
       <span class="billboard_pos">6</span> -
       <span class="artist">Lady Gaga & Bradley Cooper</span> -
       <span class="song">Shallow</span>
+    </li>
+    <li>
+      <span class="billboard_pos">1</span> -
+      <span class="artist">Jonas Brothers</span> -
+      <span class="song">Sucker</span>
+    </li>
+    <li>
+      <span class="billboard_pos">2</span> -
+      <span class="artist">Ariana Grande</span> -
+      <span class="song">7 Rings</span>
     </li>
     <li>
       <span class="billboard_pos">7</span> -
