Add student templates for lab2, also fixed CORS server support so students can use local file to interact with remote server

--- a/lab2-simplequeries/lab2_simplequeries.html
+++ b/lab2-simplequeries/lab2_simplequeries.html
@@ -7,19 +7,33 @@
   <body>
     <div class="box_and_button">
       <div class="box"></div>
-      <button class="delay_button" data-delay="5" data-req="get">GET 5</button>
+      <button class="delay_button" data-delay="1" data-req="get">GET 1</button>
+      <button class="stop_button">STOP</button>
     </div>
     <div class="box_and_button">
       <div class="box"></div>
-      <button class="delay_button" data-delay="10" data-req="get">GET 10</button>
+      <button class="delay_button" data-delay="1" data-req="post">POST 1</button>
+      <button class="stop_button">STOP</button>
+    </div>
+    <div class="box_and_button">
+      <div class="box"></div>
+      <button class="delay_button" data-delay="5" data-req="get">GET 5</button>
+      <button class="stop_button">STOP</button>
     </div>
     <div class="box_and_button">
       <div class="box"></div>
       <button class="delay_button" data-delay="5" data-req="post">POST 5</button>
+      <button class="stop_button">STOP</button>
+    </div>
+    <div class="box_and_button">
+      <div class="box"></div>
+      <button class="delay_button" data-delay="10" data-req="get">GET 10</button>
+      <button class="stop_button">STOP</button>
     </div>
     <div class="box_and_button">
       <div class="box"></div>
       <button class="delay_button" data-delay="10" data-req="post">POST 10</button>
+      <button class="stop_button">STOP</button>
     </div>
   </body>
 </html>
