Changing JS link from solution to empty slate

--- a/lab1-dom/dom_manipulation.html
+++ b/lab1-dom/dom_manipulation.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>Lab 1 - DOM Manipulation</title>
-  <script src="dom_manipulation_solution.js"></script>
-  <!--<script src="dom_manipulation.js"></script> -->
+  <!--<script src="dom_manipulation_solution.js"></script>-->
+  <script src="dom_manipulation.js"></script>
 </head>
 
 <body>
