Small refactoring for lab 2

--- a/lab2-simplequeries/lab2_simplequeries.html
+++ b/lab2-simplequeries/lab2_simplequeries.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
+    <!---<script src="script.js"></script>-->
+    <script src="script_solution.js"></script>
   </head>
   <body>
     <div class="box_and_button">
